fix overflow

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -200,7 +200,7 @@ input[type=button] {
 
     .hero {
         h1 {
-            font-size: 3.2em;
+            font-size: 3.2rem;
         }
     }
 
@@ -225,7 +225,7 @@ input[type=button] {
 
     .hero {
         h1 {
-            font-size: 2.7em;
+            font-size: 2.7rem;
             margin-top: 40px;
         }
         height: 320px;
